# stovoy.dev

./: .dockerignore  .gitignore  Dockerfile  Tiltfile  docker-compose.yml  package.json  restart.sh
backend/: Cargo.toml  build.rs
backend/src/: lib.rs
frontend/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/src/: app.css
frontend/src/lib/: markdown.ts
frontend/src/lib/components/: CodeViewer.svelte  SnakeGame.svelte
frontend/src/lib/stores/: codeFiles.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/blog/: +page.svelte  +page.ts
frontend/src/routes/blog/[slug]/: +page.ts
frontend/src/routes/code/: +page.svelte
frontend/src/routes/game/snake/: +page.svelte
frontend/src/routes/projects/moire-simulator/: +page.svelte
frontend/tests/: homepage.spec.ts  moire-simulator.spec.ts
