[package]
name = "stovoy-dev-backend-axum"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.31", features = ["trace"] }
anyhow = "1"


# Configuration
config = { version = "0.15", default-features = false, features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6", features = ["fs"] }

# JSON serialization
serde_json = "1.0"

once_cell = "1"

stovoy_source = { path = "../stovoy_source" }

[build-dependencies]
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rss = "2"
chrono = { version = "0.4" }
regex = "1"

[dev-dependencies]
tower = "0.5"
tokio-tungstenite = "0.28"
futures-util = "0.3"


[[bin]]
name = "stovoy-dev-axum"
path = "src/main.rs"
